--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "leaflet": "^1.9.4",
+    "leaflet-canvas-marker": "^0.2.0",
+    "leaflet.markercluster": "^1.5.3",
     "next": "14.2.3",
+    "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-markercluster": "^3.0.0-rc1"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
+  },
+  "prettier": {
+    "tabWidth": 2
   }
 }
