form w/ latlng+name+msg

--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   },
   "dependencies": {
     "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
+    "formik": "^2.4.6",
     "leaflet": "^1.9.4",
     "leaflet-canvas-marker": "^0.2.0",
     "leaflet.markercluster": "^1.5.3",
+    "mongodb": "^6.6.1",
     "next": "14.2.3",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-markercluster": "^3.0.0-rc1"
+    "react-leaflet-markercluster": "^3.0.0-rc1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/leaflet.markercluster": "^1.5.4",
